Fix code block overflow.
Fix the issue where long lines in a code block overflow its box.
Solve this by using pre-wrap for large screen and overflow: auto
for small screen.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,14 @@ pre, code {
   background-color: lightgray;
 }
 pre {
+  white-space: pre-wrap;
   padding: 4px;
+}
+@media screen and (max-width: 768px){
+  pre {
+    white-space: pre;
+    overflow: auto;
+  }
 }
 code {
   padding: 0px 4px 0px 4px;
